# SkillboxSearchEngineMovie

./: CMakeLists.txt  CMakeSettings.json
SkillboxSearchEngineMovie/: CMakeLists.txt  config.json
SkillboxSearchEngineMovie/functions/: functionsExample
SkillboxSearchEngineMovie/include/: Requests.h  SkillboxSearchEngineMovie.h  start.h
SkillboxSearchEngineMovie/resources/: Four Tank-Men and a Dog.txt  Ivan Vasilievich Changes Profession.txt  Only Old Men Are Going Into Battle.txt  Ruslan and Ludmila.txt  Salyut 7.txt  Seventeen Moments of Spring.txt  The Adventures of Sherlock Holmes and Dr. Watson.txt  The Irony of Fate, or Enjoy Your Bath!.txt  The Place of meeting can not be changed.txt  The Three Musketeers.txt
SkillboxSearchEngineMovie/src/: Configuration.cpp  ConverterJSON.cpp  Counter.cpp  Requests.cpp  SkillboxSearchEngineMovie.cpp  configurationCounter.cpp  start.cpp
